<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context=".ui.user.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_photo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d40"
        android:layout_marginRight="@dimen/d40"
        android:layout_marginTop="@dimen/d80"
        app:cardCornerRadius="@dimen/d10">
        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@mipmap/touxiang_1">

        </ImageView>

    </androidx.cardview.widget.CardView>
    <EditText
        android:id="@+id/et_name"
        android:layout_marginLeft="@dimen/d40"
        android:layout_marginRight="@dimen/d40"
        android:layout_marginTop="@dimen/d10"
        app:layout_constraintTop_toBottomOf="@+id/cv_photo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_et_register"
        android:hint="@string/enter_full_name"
        android:textColorHint="@color/mmy1"
        android:textColor="@color/mmy3"
        android:textSize="@dimen/s15"
        android:maxLength="30"
        android:paddingLeft="@dimen/d15">

    </EditText>

    <EditText
        android:id="@+id/et_email"
        android:layout_marginLeft="@dimen/d40"
        android:layout_marginRight="@dimen/d40"
        android:layout_marginTop="@dimen/d10"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_et_register"
        android:hint="@string/enter_email"
        android:textColorHint="@color/mmy1"
        android:textColor="@color/mmy3"
        android:textSize="@dimen/s15"
        android:maxLength="30"
        android:paddingLeft="@dimen/d15">

    </EditText>

    <EditText
        android:id="@+id/et_password"
        android:layout_marginLeft="@dimen/d40"
        android:layout_marginRight="@dimen/d40"
        android:layout_marginTop="@dimen/d10"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d50"
        android:background="@drawable/bg_et_register"
        android:hint="@string/enter_password"
        android:textColorHint="@color/mmy1"
        android:textColor="@color/mmy3"
        android:textSize="@dimen/s15"
        android:maxLength="30"
        android:paddingLeft="@dimen/d15"
        android:inputType="textPassword">

    </EditText>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d50"
        android:layout_marginLeft="@dimen/d40"
        android:layout_marginRight="@dimen/d40"
        android:layout_marginTop="@dimen/d10"
        android:text="@string/register"
        android:background="@drawable/bg_btn_register_not"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textAllCaps="false">

    </Button>

    <TextView
        android:id="@+id/tv_goLogin"
        android:text="@string/go_to_login"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/d20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>